Fixed spacing issues with the projects gallery

--- a/portfolio.css
+++ b/portfolio.css
@@ -14,10 +14,9 @@
 .gallery {
     display: flex;
     overflow-x: hidden;
+    overflow-y: hidden;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
-    max-width: 750px;
-    max-height: 750px;
 }
 
 .slide {
@@ -47,51 +46,36 @@
     height: 15px;
 }
 
-.project {
-    margin: auto;
-    display: -ms-flexbox;
-    display: -webkit-flex;
+.projects {
     display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-align-content: stretch;
-    -ms-flex-line-pack: stretch;
-    align-content: stretch;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    width: 90%;
-    outline: 2px solid black;
+    justify-content: center;
+}
+
+.project {
+    flex: 0 0 auto;
+    border: 2px solid black;
     border-radius: 40px;
-    max-width: 60%;
-    max-height: 60%;
-    min-width: 425px;
+    margin-left: 4%;
+    margin-right: 5%;
+    align-self: center;
+    width: 95%;
+    overflow: hidden; /* just in case */
+
 }
 
 .projectText {
-    position: relative;
-    top: 5px;
-    left: 50px;
-    max-width: 30%;
-    float: left;
+    width: 100%;
 }
 
+.projectVideo,
 .projectImage {
-    justify-content: center;
-    align-self: center;
-    margin-left: 20%;
-    width: 40%;
+    border: 5px solid black;
+    border-radius: 30px;
     max-width: 100%;
     max-height: 100%;
-    float: right;
-    object-fit: contain;
+    display: block;
+    margin: auto;
+    margin-bottom: 30px;
 }
 
 .experience {
